Fix alignment for last column in PullRequestComponent

--- a/app/components/pull_requests_header_component/pull_requests_header_component.less
+++ b/app/components/pull_requests_header_component/pull_requests_header_component.less
@@ -5,5 +5,9 @@
         border-bottom: 2px solid @grey;
         font-weight: bold;
         padding: 8px;
+
+        &:last-child {
+            text-align: center;
+        }
     }
 }
